# envilog

./: .gitignore  CMakeLists.txt  Makefile  README.md  envilog_partitions.csv
components/builtin_led/: CMakeLists.txt  builtin_led.c
components/builtin_led/include/: builtin_led.h
components/data_manager/: CMakeLists.txt  data_manager.c
components/data_manager/include/: data_manager.h
components/dht11_sensor/: CMakeLists.txt  dht11_sensor.c
components/dht11_sensor/include/: dht11_sensor.h
components/envilog_config/include/: envilog_config.h
components/envilog_mqtt/: CMakeLists.txt  envilog_mqtt.c
components/envilog_mqtt/include/: envilog_mqtt.h
components/error_handler/: CMakeLists.txt  error_handler.c
components/error_handler/include/: error_handler.h
components/http_server/: CMakeLists.txt  http_server.c
components/http_server/include/: http_server.h
components/led_strip/: CMakeLists.txt
components/network_manager/: CMakeLists.txt  network_manager.c
components/network_manager/include/: network_manager.h
components/system_manager/: CMakeLists.txt  system_manager.c
components/system_manager/include/: system_manager.h
components/task_manager/: CMakeLists.txt  system_monitor_msg.c  task_manager.c
components/task_manager/include/: system_monitor_msg.h  task_manager.h
core/: main.c
hal/esp32s3/: esp32s3.h
hal/gpio/: gpio.c  gpio.h
hal/system/: system.c  system.h
main/: CMakeLists.txt  Kconfig.projbuild  envilog_config.h  main.c
main/include/: envilog_config.h
startup/: linker.ld  startup.c
www/: index.html
www/css/: styles.css
www/js/: main.js
